<resources>
    <string name="app_name">Money Manager</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storage_permission_req">To import excel files, Application need external storage permission. You will not be able to import excel sheets if you don\'t grant permission</string>
    <string name="grant">GRANT</string>
    <string name="permission_req">Permission Request</string>
    <string name="rupee">\u20B9</string>
    <string name="addFund">Add new fund</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="top10">Top ten</string>
    <string name="importExcel">Import excel file</string>
    <string name="no_records">No records found</string>
    <string name="details">Details</string>
    <string name="no_results">Sorry... No results found</string>
    <string name="add">ADD</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this record ? This action is final, and deleted records cannot be recovered later.</string>
    <string name="delete_dialog_title">Delete ?</string>
</resources>
