<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/dialog_header"
        android:id="@+id/dialogHeader"
        android:padding="10dp">
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/comforta"
            android:text="@string/addFund"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="5dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/ic_close"
            android:background="@null"
            android:id="@+id/close_button"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_rupee"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/dialog_title"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialogHeader"
        android:background="@drawable/dialog_body"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/userRow">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_user"
            android:id="@+id/userAvatar"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:hint="@string/name"
            android:fontFamily="@font/comforta"
            android:textColor="@color/black"
            android:id="@+id/donorName"
            android:paddingLeft="10dp"
            android:maxLines="1"
            android:textSize="16sp"
            android:inputType="text"
            android:focusable="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userRow"
            android:layout_marginTop="15dp"
            android:id="@+id/amountRow">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_money"
                android:id="@+id/moneyGraphic"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:hint="@string/amount"
                android:fontFamily="@font/comforta"
                android:textColor="@color/black"
                android:id="@+id/donorAmount"
                android:paddingLeft="10dp"
                android:maxLines="1"
                android:textSize="16sp"
                android:inputType="number"
                android:focusable="true"/>
        </LinearLayout>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/comforta"
            android:text="ADD"
            android:textColor="@color/white"
            android:background="@drawable/blue_button"
            android:layout_below="@id/amountRow"
            android:layout_marginTop="15dp"
            android:layout_alignParentRight="true"
            android:id="@+id/addFundButton"/>



    </RelativeLayout>


</RelativeLayout>